--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>web-cart-galaxy</title>
+    <link rel="icon" type="image/jpeg" href="./logo-for-shop.jpeg">
     <meta name="description" content="shop from a to z" />
     <meta name="author" content="ali-ezz" />
 
     <meta property="og:title" content="web-cart-galaxy" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="shop from a to z" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="logo-for-shop.jpeg" />
+    <meta property="og:image" content="./logo-for-shop.jpeg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="logo-for-shop.jpeg" />
-  </head>
+</head>
 
   <body>
     <div id="root"></div>
