--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="./logo-for-shop.jpeg" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="logo-for-shop.jpeg" />
+    <meta name="twitter:card" content="./logo-for-shop.jpeg" />
+    <meta name="twitter:site" content="./logo-for-shop.jpeg" />
+    <meta name="twitter:image" content="./logo-for-shop.jpeg" />
 </head>
 
   <body>
