--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>web-cart-galaxy</title>
-    <link rel="icon" type="image/jpeg" href="./logo-for-shop.jpeg">
+    <link rel="icon" type="image/png" href="./logo-for-shop.png">
     <meta name="description" content="shop from a to z" />
     <meta name="author" content="ali-ezz" />
 
     <meta property="og:title" content="web-cart-galaxy" />
     <meta property="og:description" content="shop from a to z" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="./logo-for-shop.jpeg" />
+    <meta property="og:image" content="./logo-for-shop.png" />
 
-    <meta name="twitter:card" content="./logo-for-shop.jpeg" />
-    <meta name="twitter:site" content="./logo-for-shop.jpeg" />
-    <meta name="twitter:image" content="./logo-for-shop.jpeg" />
+    <meta name="twitter:card" content="./logo-for-shop.png" />
+    <meta name="twitter:site" content="./logo-for-shop.png" />
+    <meta name="twitter:image" content="./logo-for-shop.png" />
 </head>
 
   <body>
